--- a/proto/index.htm
+++ b/proto/index.htm
@@ -54,6 +54,7 @@ less = {
 	<!-- user-defined JS lib here! -->
 	<script src="../src/ixw/lib/const.js"></script>
 	<script src="../src/ixw/lib/shareData.js"></script>
+	<script src="../src/ixw/lib/util.js"></script>
 	<script src="../src/nvlib/model.js"></script>
 	<!-- <script src="../src/ixw/lib/treeModel.js"></script> -->
 	<script src="../src/ixw/grid/cols.js"></script>
